--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -15,7 +14,7 @@
     <meta http-equiv="cleartype" content="on">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="bundle.css">
+    <link rel="stylesheet" type="text/css" href="bundle.css">
   </head>
 
   <body>
